# good_smell

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  dev-requirements.txt  pyproject.toml  range_len_fix.py  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-smell.md
.github/workflows/: pythonpackage.yml  pythonpublish.yml
docs/: generate_smell_doc.py  smell_list.md
good_smell/: __init__.py  ast_smell.py  flake8_ext.py  lint_smell.py  main.py  nested_for.py  range_len_fix.py  smell_warning.py
good_smell/smells/: __init__.py  filter.py  iterator_filter.py  iterator_map.py  join_literal.py  missing_dropwhile.py  nested_for.py  range_len_fix.py  yield_from.py
iter_lint/: __init__.py  main.py  nested_for.py  range_len_fix.py  range_len_rgx.py
src/: __init__.py  ast_smell.py  main.py
src/smells/: nested_for.py  range_len_fix.py
tests/: conftest.py  test_ast_cmp.py  test_collection.py  test_enumerate_fix.py  test_flake8_ext.py  test_nested_for.py  test_no_transform.py
tests/examples/: example.py  filter.py  iterator_filter.py  iterator_map.py  join_literal.py  missing_dropwhile.py  nested_for.py  range_len.py  yield_from.py
