[tool.poetry]
name = "good_smell"
version = "0.16"
description = "A linter/refactoring tool to make your code smell better!"
authors = ["Tomer Keren <tomer.keren.dev@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/Tadaboody/good_smell"
classifiers = [
"Development Status :: 3 - Alpha",
"Framework :: Flake8",
"Environment :: Console",
"Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
fire = "*"
astor = "*"
flake8 = "^3"

[tool.poetry.dev-dependencies]
pre-commit = "*"
pytest = "*"
autopep8 = "*"
pylint = "*"
black = "==18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
