[metadata]
name = good_smell
version = 0.14
author = Tomer Keren
author_email = tomer.keren.dev@gmail.com
description = A linter/refactoring tool to make your code smell better!
long_description=file: README.md 
long_description_content_type = text/markdown
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Framework :: Flake8
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
url = https://github.com/Tadaboody/good_smell

[options]
packages = :find
install_requires =
    fire
    astor
    flake8 >= 3.0.0

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    good_smell=good_smell:main
flake8.extension =
    SML=good_smell:GoodSmellFlake8


[tool:pytest]
mccabe-complexity = 6
addopts = --cov-report=term-missing --cov-config=./setup.cfg --cov-report=xml:coverage.xml -v

[flake8]
ignore = W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    __init__.py,
    venv
max-complexity = 10
max-line-length = 90

[coverage:run]
branch = True
omit =
    server/database/schema_generator.py
    server/social/social_net.py

[coverage:path]
source =
    server/

[coverage:report]
exclude_lines =
    pragma: no cover
   
    def __repr__
    if self\.debug
   
    raise AssertionError
    raise NotImplementedError
    pass
   
    if 0:
    if __name__ == .__main__.:
   
    import
sort = Cover
ignore_errors = True
skip_covered = True

[coverage:html]
directory = coverage_html_report

[coverage:xml]
output = cov.xml
